aws-ecommerce-infra/modules/networking/Internet-gateway.tf
# 4- Create Internet Gateway
resource "aws_internet_gateway" "internet_gateway" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name = "project_igw"
  }
}
