aws-ecommerce-infra/modules/networking/SECURI~1.TF
# 11- Craete Security group for EC2 Instances
resource "aws_security_group" "WebSG" {
  name   = "WebSG"
  vpc_id = aws_vpc.vpc.id
  dynamic "ingress" {
    for_each = var.allowed_ports
    iterator = port
    content {
      from_port   = port.value
      to_port     = port.value
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
